Bug: Removed overflow hidden

--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ body {
     font-family: 'Open Sans', sans-serif;
     text-transform: uppercase;
     position: relative;
-    overflow: hidden;
 }
 
 header {
